syntax = "proto3";

option csharp_namespace = "QuickChat.Gateway.Services";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package MessageApi;

service Message {
    rpc GetChatMessages(GetChatMessagesRequest) returns (GetChatMessagesReply) {}
    rpc AddMessage(AddMessageRequest) returns (google.protobuf.Empty) {}
    rpc EditMessage(EditMessageRequest) returns (google.protobuf.Empty) {}
    rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty) {}
}

message GetChatMessagesRequest {
    string chat_id = 1;
    int32 limit = 2;
    optional int64 cursor = 3;
}

message GetChatMessagesReply {
    repeated MessageMessage messages = 1;
}

message MessageMessage {
    int64 id = 1;
    string chat_id = 2;
    string user_id = 3;
    string text = 4;
    repeated MessageAttachmentMessage attachments = 5;
    google.protobuf.Timestamp created_at = 6;
}

message MessageAttachmentMessage {
    string id = 1;
    string attachment_id = 2;
    string file_name = 3;
    AttachmentType type = 4;
    string url = 5;
    int64 size = 6;
}

enum AttachmentType {
  FILE = 0;
  IMAGE = 1;
  VIDEO = 2;
}

message AddMessageRequest {
    string chat_id = 1;
    string user_id = 2;
    string text = 3;
    repeated string attachment_ids = 4;
}

message EditMessageRequest {
    int64 id = 1;
    string chat_id = 2;
    string text = 3;
    repeated string attachment_ids = 4;
    string actor_id = 5;
}

message DeleteMessageRequest {
    int64 id = 1;
    string chat_id = 2;
    string actor_id = 3;
}
